<resources>
    <string name="app_name">Assignment</string>
    <string name="user_name">User Name</string>
    <string name="todo">TODO</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="online_banking">Online Banking</string>
    <string name="credit_card">Credit Card</string>
    <string name="tng_e_wallet">TNG E-wallet</string>
    <string name="selected_bank">Selected Online Banking</string>
    <string name="selected_card">Selected Credit Card</string>
    <string name="selected_Ewallet">Selected TNG E-wallet</string>
    <string name="start">Start</string>
    <string name="payment_selection">Payment Selection</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>